# attendance

./: .gitignore  README.md  pyproject.toml  setup.py
simple_sheet/: __init__.py  core.py  utils.py
src/: main.py  test.py
src/sheets/: attendance.csv  sample.csv  student_list.json  test_case.json
