[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-sheet"
version = "0.1.0"
description = "Simple spreadsheet abstraction for Google Sheets and CSV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["simple_sheet"]
